@@ -16,6 +16,7 @@ This release includes the following bugfixes:
  o crash on bad socket close with FTP
  o leaking cookie memory when duplicate domains or paths were used
  o build fix for Symbian
+ o CURLOPT_USERPWD set to NULL clears auth credentials
 
 This release includes the following known bugs:
 
@@ -24,6 +25,7 @@ This release includes the following known bugs:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Kamil Dudka, Caolan McNamara, Frank McGeough, Andre Guibert de Bruet
+ Kamil Dudka, Caolan McNamara, Frank McGeough, Andre Guibert de Bruet,
+ Mike Crowe
 
         Thanks! (and sorry if I forgot to mention someone)
